# GearLang

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  compile_commands.json  iface.mgr  test.py  tester.py  tmp.json
asm/: _start_stub.asm
data/: tokens.txt
doc/: analyze.md  ast.md  ctx.md  error.md  generate.md  iface.mgr  lex.md  modules.md  optimize.md  parse.md  rando.md  syntax.md  type.md
examples/: hello_world.gear
include/gearlang/: ctx.hpp  error.hpp  etc.hpp  func.hpp  lex.hpp  optimizer.hpp  value.hpp
include/gearlang/ast/: base.hpp  branch.hpp  expr.hpp  func.hpp  lit.hpp  stmt.hpp  vars.hpp
include/gearlang/ffi/: c.hpp  core.hpp
include/gearlang/sem/: analyze.hpp  analyzer_debug.hpp  type.hpp  val.hpp
prg/: hi.c  hi.cpp  hi.gr  loop.gear  main.gear  main.txt  string.gear  struct.gear  test.gear  test.txt  tokens.txt  types.gear  types.txt  warn.gear
prg/mod_test/: iface.gr  main.gr
src/: CMakeLists.txt  ast.cpp  ast.hpp  ast_expr.hpp  ctx.cpp  ctx.hpp  error.c  error.cpp  error.h  error.hpp  fsm.cpp  func.cpp  func.hpp  generate.cpp  iface.cpp  lex.cpp  lex.hpp  main.cpp  optimize.cpp  parse.cpp  sem.cpp  sem.hpp  setup.cpp  startup.cpp  syscall.cpp  syscall.hpp  value.hpp  var.cpp  var.hpp
src/ana/: expr.cpp  literal.cpp  ops.cpp  stmt.cpp  vars.cpp
src/analyze/: decl.cpp  expr.cpp  literal.cpp  ops.cpp  stmt.cpp  vars.cpp
src/ast/: base.hpp  expr.hpp  stmt.hpp
src/ffi/: CMakeLists.txt  c_header.cpp
src/ffi/c_lang/: core.cpp  front.cpp  visitor.cpp  visitor.hpp
src/generate/: CMakeLists.txt  base.cpp  branch.cpp  expr.cpp  func.cpp  literal.cpp
src/lex/: CMakeLists.txt  char.cpp  classify.cpp  fsm.cpp  lex.cpp  tokenize.cpp
src/par/: CMakeLists.txt  base.cpp  branch.cpp  expr.cpp  expr_etc.cpp  func.cpp  func_head.cpp  literal.cpp  stmt.cpp  var.cpp
src/parse/: CMakeLists.txt  base.cpp  expr.cpp  func.cpp  func_head.cpp  literal.cpp  stmt.cpp
src/sem/: analyze.cpp  analyze.hpp  type.cpp  type.hpp  type_parse.cpp
src/sem/type/: core.cpp  llvm.cpp  parse.cpp
tests/: error_list.txt  format.md
tests/assign_ast/: test.gear  test.json
tests/basic_ast/: test.json
tests/basic_lex/: test.gear  test.json
tests/comment/: test.gear  test.json
tests/deep_nest/: test.gear  test.json
tests/false_keywords/: test.gear  test.json
tests/func_lex/: test.gear  test.json
tests/invalid_string1/: test.gear  test.json
tests/invalid_string2/: test.json
tests/keyword/: test.gear  test.json
tests/lex_stress/: test.gear  test.json
tests/neg_num_lex/: test.gear  test.json
tests/nested_ast/: test.gear  test.json
tests/no_paren_op/: test.json
tests/nums/: test.gear  test.json
tests/op_ambu/: test.gear  test.json
tests/operators/: test.gear  test.json
tests/paren_ast/: test.json
tests/punctuation/: test.gear  test.json
tests/stress_ast/: test.gear  test.json
tests/stress_lex/: test.gear  test.json
tests/string/: test.gear  test.json
tests/string2/: test.gear  test.json
tests/string_comment/: test.json
tests/var_to_var/: test.json
tests/weird_ident/: test.gear  test.json
tests/whitespace/: test.gear  test.json
